<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.sparkly.pixely.activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/colorAccent"
            android:text="@string/photo_quality"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/rear_image_quality"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingStart="12dp">

        <RadioButton
            android:id="@+id/rearSmallImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/rearMediumImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:checked="false"
            android:text="@string/medium"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/rearBestImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:checked="false"
            android:text="@string/big"
            android:textAllCaps="true" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/frontal_image_quality"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="12dp">

            <RadioButton
                android:id="@+id/frontalSmallImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/small"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/frontalMediumImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:checked="false"
                android:text="@string/medium"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/frontalBestImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:checked="false"
                android:text="@string/big"
                android:textAllCaps="true" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source"
            android:layout_margin="6dp"
            android:id="@+id/openSourceButton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
